# StoryBox

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  tailwind.config.js
public/: manifest.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  cache.rs  db.rs  lib.rs  processor.rs  scanner.rs  stories.rs  watcher.rs
src/components/: ActivityIndicator.tsx  HomeFeed.tsx  Icons.tsx  Logo.tsx  SettingsPanel.tsx  StoryViewer.tsx
supabase/functions/openrouter-proxy/: index.ts
